# wave-audio-animation

./: .env.example  .gitignore  AGENTS.md  README.md  dev.sh  docker-compose.yml  drizzle.config.ts  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/auth/: dependencies.py  router.py  service.py
backend/app/db/: connection.py  models.py
backend/app/exports/: router.py
backend/app/jobs/: __init__.py  store.py
backend/app/services/: __init__.py  audio.py  exporter.py  renderer.py
backend/tests/: test_audio_service.py  test_auth_router.py  test_auth_service.py  test_db.py  test_exporter.py  test_exports_router.py  test_health.py  test_job_store.py  test_renderer.py
docs/superpowers/plans/: 2026-04-07-wave-audio-animation.md  2026-04-08-monorepo-fastapi.md  2026-04-08-wizard-shadcn-redesign.md
docs/superpowers/specs/: 2026-04-07-monorepo-fastapi-design.md  2026-04-07-wave-audio-animation-design.md  2026-04-08-wizard-shadcn-redesign.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/: types.test.ts  types.ts
frontend/src/app/: page.tsx  (+1 more)
src/: auth.test.ts  auth.ts  middleware.test.ts  middleware.ts  next-auth.d.ts  proxy.test.ts  proxy.ts  types.test.ts  types.ts
src/app/: layout.tsx  providers.tsx
src/db/: schema.test.ts  schema.ts
src/lib/: audio.test.ts  audio.ts  db-config.test.ts  db-config.ts  db.ts  exporter.test.ts  exporter.ts  renderer.test.ts  renderer.ts
(+33 files in other folders)
